kubernetes/apps/external-ingresses/zigbee2mqtt/garagem/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbeetomqtt-garagem-proxy-service
  namespace: external-ingresses
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zigbeetomqtt-garagem-proxy-service # Must be equal to Service name for automatic mapping
  namespace: external-ingresses
subsets:
  - addresses:
      - ip: 10.30.50.10 # zigbee2mqtt garagem host
    ports:
      - port: 8080
        name: http
        protocol: TCP

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: zigbeetomqtt-garagem-passthrough
  namespace: external-ingresses
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: zigmqtt-garagem-httproute

---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigmqtt-garagem-httproute
  namespace: external-ingresses
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Zigbee Garagem
    gethomepage.dev/group: Home Automation
    gethomepage.dev/icon: si-zigbee2mqtt.svg
    gethomepage.dev/name: Zigbee Garagem
    gethomepage.dev/showStats: "false"
spec:
  hostnames:
    - zigmqtt-garagem.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: zigbeetomqtt-garagem-proxy-service
          namespace: external-ingresses
          port: 80
          weight: 1
